--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "5358b58f-ddb5-4a4d-a4ce-559a064047b1"
   },
   "newProjectRoot": "projects",
   "projects": {
