--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "frontend",
   "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:frontend": "node dist/frontend/server/server.mjs"
-  },
+"scripts": {
+  "ng": "ng",
+  "start": "ng serve",
+  "build": "ng build",
+  "watch": "ng build --watch --configuration development",
+  "test": "ng test",
+  "dev:ssr": "ng run frontend:serve-ssr",
+  "build:ssr": "ng build && ng run frontend:server",
+  "serve:ssr": "node dist/frontend/server/server.mjs"
+},
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
