--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "frontend",
   "version": "0.0.0",
-"scripts": {
-  "ng": "ng",
-  "start": "ng serve",
-  "build": "ng build",
-  "watch": "ng build --watch --configuration development",
-  "test": "ng test",
-  "dev:ssr": "ng run frontend:serve-ssr",
-  "build:ssr": "ng build && ng run frontend:server",
-  "serve:ssr": "node dist/frontend/server/server.mjs"
-},
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "dev:ssr": "ng run frontend:serve-ssr",
+    "build:ssr": "ng build && ng run frontend:server",
+    "serve:ssr": "node dist/frontend/server/server.mjs"
+  },
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
@@ -33,6 +33,7 @@
     "@angular/platform-server": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.2",
+    "chart.js": "^4.5.0",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -42,6 +43,7 @@
     "@angular/build": "^20.2.2",
     "@angular/cli": "^20.2.2",
     "@angular/compiler-cli": "^20.2.0",
+    "@types/chart.js": "^2.9.41",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
