--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.2",
     "chart.js": "^4.5.0",
+    "chartjs-plugin-annotation": "^3.1.0",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
