--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "dev:ssr": "ng run frontend:serve-ssr",
-    "build:ssr": "ng build && ng run frontend:server",
-    "serve:ssr": "node dist/frontend/server/server.mjs"
+    "dev": "ng serve --port=4200",
+    "dev:ssr": "ng run frontend:serve-ssr:development",
+    "build:ssr": "ng build --configuration production && ng run frontend:server:production",
+    "serve:ssr": "NODE_OPTIONS=\"--unhandled-rejections=strict\" node dist/frontend/server/server.mjs",
+    "serve:ssr:dev": "NODE_OPTIONS=\"--unhandled-rejections=strict\" node dist/frontend/server/server.mjs --PORT=4200",
+    "debug:ssr": "NODE_OPTIONS=\"--inspect --unhandled-rejections=strict\" node dist/frontend/server/server.mjs",
+    "clean": "rm -rf dist .angular/cache",
+    "clean:install": "npm run clean && npm install"
   },
   "prettier": {
     "printWidth": 100,
@@ -33,9 +38,10 @@
     "@angular/platform-server": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.2",
+    "@types/express": "^4.17.17",
     "chart.js": "^4.5.0",
     "chartjs-plugin-annotation": "^3.1.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -45,7 +51,6 @@
     "@angular/cli": "^20.2.2",
     "@angular/compiler-cli": "^20.2.0",
     "@types/chart.js": "^2.9.41",
-    "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
     "jasmine-core": "~5.9.0",
