--- a/angular.json
+++ b/angular.json
@@ -71,7 +71,8 @@
           "options": {
             "buildTarget": "frontend:build:development",
             "port": 4200,
-            "host": "localhost"
+            "host": "localhost",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
